    abc from the ext.mutable docs as it was being used
    incorrectly and makes the example more difficult
    to understand in any case.  [ticket:2152]

- examples
  - removed the ancient "polymorphic association"
    examples and replaced with an updated set of
    examples that use declarative mixins, 
    "generic_associations".   Each presents an alternative
    table layout.

0.7.0b4
=======
- general
  - Changes to the format of CHANGES, this file.
    The format changes have been applied to 
    the 0.7 releases.

    - The "-declarative" changes will now be listed
      directly under the "-orm" section, as these
      are closely related.

    - The 0.5 series changes have been moved to
      the file CHANGES_PRE_06 which replaces
      CHANGES_PRE_05.

    - The changelog for 0.6.7 and subsequent within
      the 0.6 series is now listed only in the 
      CHANGES file within the 0.6 branch.  
      In the 0.7 CHANGES file (i.e. this file), all the
      0.6 changes are listed inline within the 0.7
      section in which they were also applied 
      (since all 0.6 changes are in 0.7 as well).
      Changes that apply to an 0.6 version here
      are noted as are if any differences in 
      implementation/behavior are present.

- orm
  - Some fixes to "evaulate" and "fetch" evaluation
    when query.update(), query.delete() are called.
    The retrieval of records is done after autoflush
    in all cases, and before update/delete is 
    emitted, guarding against unflushed data present
    as well as expired objects failing during 
    the evaluation.  [ticket:2122]

  - Reworded the exception raised when a flush
    is attempted of a subclass that is not polymorphic
    against the supertype.  [ticket:2063]

  - Still more wording adjustments when a query option
    can't find the target entity.  Explain that the
    path must be from one of the root entities.

  - Some fixes to the state handling regarding 